<resources>
    <string name="app_name">"Burke's AirBnB"</string>

    <!-- wish -->
    <string-array name="wish_empty">
        <item>TITLE</item>
        <item>MSG TITLE</item>
        <item>HALKSDJF S KLASJDF ASLDKFJ SLKDJFLSKDF LSKDJFAL SKDFJ ASLDKFJSKADF SALDKJF ASLDKF </item>
        <item>SEARCH</item>
    </string-array>

    <!-- message -->
    <string-array name="message_empty">
        <item>TITLE</item>
        <item>MSG TITLE</item>
        <item>HALKSDJF S KLASJDF ASLDKFJ SLKDJFLSKDF LSKDJFAL SKDFJ ASLDKFJSKADF SALDKJF ASLDKF </item>
        <item>SEARCH</item>
    </string-array>

    <string name="navi_setting">메뉴1</string>
    <string name="navi_hosting">메뉴2</string>
    <string name="navi_registeration">메뉴3</string>
    <string name="navi_invite">메뉴4</string>
    <string name="navi_help">메뉴5</string>
    <string name="navi_switch">메뉴6</string>

    <string name="travel_tab1">tab1</string>
    <string name="travel_tab2">tab2</string>

    <string name="main_is_where_travel">어디 여행 가세요?</string>
    <string name="main_hello">%s님, 안녕하세요!</string>
    <string name="main_message">전 세계 숙소들이 블라블라 어쩌고 저쩌고 이러쿵 저러쿵 쿵쿵쿵</string>
    <string name="main_recyler_recently">최근 조회</string>
    <string name="main_recyler_recommandation">추천항목</string>
    <string name="main_recyler_famous">유명한 그곳</string>

</resources>
