<?xml version="1.0" encoding="utf-8"?>
<!--
  ~ Copyright 2016. Burke Choi All rights reserved.
  ~             http://www.sarangnamu.net
  ~
  ~ Licensed under the Apache License, Version 2.0 (the "License");
  ~ you may not use this file except in compliance with the License.
  ~ You may obtain a copy of the License at
  ~
  ~      http://www.apache.org/licenses/LICENSE-2.0
  ~
  ~ Unless required by applicable law or agreed to in writing, software
  ~ distributed under the License is distributed on an "AS IS" BASIS,
  ~ WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
  ~ See the License for the specific language governing permissions and
  ~ limitations under the License.
  -->

<menu xmlns:android="http://schemas.android.com/apk/res/android">
    <group
        android:checkableBehavior="single">
        <item
            android:id="@+id/navi_setting"
            android:title="@string/navi_setting"/>

        <item
            android:id="@+id/navi_hosting"
            android:title="@string/navi_hosting"/>

        <item
            android:id="@+id/navi_registration"
            android:title="@string/navi_registeration"/>

        <item
            android:id="@+id/navi_invite"
            android:title="@string/navi_invite"/>

        <item
            android:id="@+id/navi_help"
            android:title="@string/navi_help"/>
    </group>
</menu>